{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 28,
  "lineage": "a95d0086-d11c-efd8-f9be-03b79b97c35a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-18T12:41:51.683-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/itah-networking/global/firewalls/allow-edge",
            "log_config": [],
            "name": "allow-edge",
            "network": "https://www.googleapis.com/compute/v1/projects/itah-networking/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "itah-networking",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itah-networking/global/firewalls/allow-edge",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "edge",
              "toy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "origin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-18T10:36:47.060-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/itah-networking/global/firewalls/allow-origin",
            "log_config": [],
            "name": "allow-origin",
            "network": "https://www.googleapis.com/compute/v1/projects/itah-networking/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "itah-networking",
            "self_link": "https://www.googleapis.com/compute/v1/projects/itah-networking/global/firewalls/allow-origin",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "origin"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.edge",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "SECURE_BOOT",
                  "TDX_CAPABLE",
                  "SEV_CAPABLE",
                  "GVNIC",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_SNP_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "VIRTIO_SCSI_MULTIQUEUE"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-121-18867-381-125",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/itah-networking/zones/us-central1-a/disks/edge"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-05-18T12:45:10.347-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/itah-networking/zones/us-central1-a/instances/edge",
            "instance_id": "7404308142825591465",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "nginx-conf": "server {\n  listen 80;\n  location / {\n    proxy_pass http://10.128.0.2:3000;\n    proxy_set_header Host $host;\n    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n    proxy_set_header X-Real-IP $remote_addr;\n  }\n}\n",
              "startup-script": "#!/bin/bash\nset -eo pipefail\nmkdir -p /var/lib/nginx\ncurl -sf -H \"Metadata-Flavor: Google\" \\\n  http://metadata.google.internal/computeMetadata/v1/instance/attributes/nginx-conf \\\n  \u003e /var/lib/nginx/default.conf\ndocker run -d --restart=always --name nginx-proxy \\\n  -p 80:80 \\\n  -v /var/lib/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro \\\n  nginx\n"
            },
            "metadata_fingerprint": "xqtNakocXsA=",
            "name": "edge",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.27.187.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/itah-networking/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/itah-networking/regions/us-central1/subnetworks/default",
                "subnetwork_project": "itah-networking",
                "vlan": 0
              }
            ],
            "project": "itah-networking",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/itah-networking/zones/us-central1-a/instances/edge",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "edge",
              "toy"
            ],
            "tags_fingerprint": "yCVq0tX2EfM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.origin.google_compute_instance.this",
            "module.origin.google_service_account.vm"
          ]
        }
      ]
    },
    {
      "module": "module.origin",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "SECURE_BOOT",
                  "TDX_CAPABLE",
                  "SEV_CAPABLE",
                  "GVNIC",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_SNP_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "VIRTIO_SCSI_MULTIQUEUE"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-121-18867-381-125",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/itah-networking/zones/us-central1-a/disks/origin"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-05-18T10:36:48.856-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/itah-networking/zones/us-central1-a/instances/origin",
            "instance_id": "5993834990124069087",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\nset -eo pipefail\nHOME=/home/chronos docker-credential-gcr configure-docker --registries=us-central1-docker.pkg.dev\nHOME=/home/chronos docker pull us-central1-docker.pkg.dev/itah-networking/toy/origin:latest\ndocker run -d --restart=always -p 3000:3000 \\\n  -e PORT=3000 \\\n  --name origin \\\n  us-central1-docker.pkg.dev/itah-networking/toy/origin:latest\n"
            },
            "metadata_fingerprint": "OY3sdTGA2LY=",
            "name": "origin",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.58.120.210",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/itah-networking/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/itah-networking/regions/us-central1/subnetworks/default",
                "subnetwork_project": "itah-networking",
                "vlan": 0
              }
            ],
            "project": "itah-networking",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/itah-networking/zones/us-central1-a/instances/origin",
            "service_account": [
              {
                "email": "origin-vm@itah-networking.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "origin",
              "toy"
            ],
            "tags_fingerprint": "1LmsUJcQRUE=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.origin.google_service_account.vm"
          ]
        }
      ]
    }
  ]
}